syntax = "proto2";
package pinger;

message PingRequest {
  optional bytes payload = 1;
}

message PingResponse {
  optional bytes payload = 1;
}

service Pinger {
  rpc Ping (PingRequest) returns (PingResponse) {}
  rpc PingStream (stream PingRequest) returns (stream PingResponse) {}
}
